# metalli-kolmio

./: .gitignore  CMakeLists.txt  README.md  main.cpp  win.h  win.mm
shaders/: shaders.metal
